# CPP_Database_Example

./: .gitignore  CMakeLists.txt  Database_Final_Salazar.sln  README.md
Game/: Game.vcxproj  Game.vcxproj.filters  dbConfig_template.txt
Game/src/: character.cpp  character.h  database_manager.cpp  database_manager.h  game.h  main.cpp  menu.cpp  menu.h  menu_manager.cpp  menu_manager.h  misc_utils.cpp  misc_utils.h  mysql_utils.cpp  mysql_utils.h  pet.cpp  pet.h  session_manager.cpp  session_manager.h  user.cpp  user.h
mysql/: my_game.mwb  my_game.sql  my_game_using.sql
